# competition_control

./: .gitignore  README.md  concurrency-main.py  concurrency_main.py  lock_manager.py  lock_manager_dispatching.py  main.py  pyproject.toml  settings.py  teste.py  transaction_manager.py  transaction_manager_dispatching.py
Class/: data_item_lock_manager.py  transacao.py
app/: app.py
app/controller/: controller_app.py
app/static/js/: init.js
app/view/: index.html
app2/: app2.py
app2/controller/: controller_app.py
app2/static/js/: init.js
app2/view/: index.html
interface/: README.md  concurrency.py  lock_manager.py  lock_manager_dispatching.py  requirements.txt
interface/static/: package.json
interface/static/js/: communication.js  jest.config.js  tables.js
interface/static/js/tests/: debug.test.js
interface/templates/: index.html
static/: package-lock.json
static/css/: main.css
static/js/: buttons.js  communication.js  debug.js  onready.js  tables.js
templates/: communication.js  index.html
