[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "concurrency-flask"
version = "0.0.1"
authors = [
  { name="Lucas Gallindo Martins Soares", email="lgms@cin.ufpe.br" },
  { name="Abimael", email="lgms@cin.ufpe.br" },
  { name="Eric", email="lgms@cin.ufpe.br" },
]
description = "Demonstrating concurrency control in databases"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://bitbucket.org/banco-de-dados/concorrencia/src/master/"
